# employee-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  config.py  docker-compose.yaml  logs.txt  main.py  pyproject.toml
address/: router.py  schemas.py
alembic/: env.py
alembic/versions/: 0f27d6716f68_init.py  22efb6895371_init.py  488457c9908f_init.py  488e29cc718c_added_status.py  4b44d4741814_init.py  69c0cc18202b_employee_role.py  7841dd81db24_init.py  798dcf7ed0a3_init.py  80e8db80f2d3_junction_table.py  90e1d4fb38ba_junction_table.py  e6c283b6f4f4_init.py
auth/: dependencies.py  router.py  schemas.py  service.py  utils.py
chatbot/: retriever.py  router.py  router2.py  tools.py  tools2.py
chatbot/policies/: 1.md
database/: connection.py
departments/: repository.py  router.py  schemas.py  service.py
employee_department/: router.py
employees/: repository.py  router.py  schemas.py  service.py
exceptions/: __init__.py  handlers.py
middleware/: __init__.py  logger.py
models/: __init__.py  address.py  department.py  employee.py  employee_department.py
repositories/: employee_repo.py
routers/: employee_router.py
services/: employee_service.py
tests/: conftest.py  test_employee_service.py  test_exception.py  test_smoke.py
